sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/Brand_Actuals_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Brand Actuals Adjustment</label>
    <nameField>
        <displayFormat>AA{0}</displayFormat>
        <label>Actuals Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Actuals Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>