sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/Actuals_Date__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Date__c</fullName>
    <description>The date of value that comes from Snowflake</description>
    <label>Actuals Date</label>
    <type>Date</type>
</CustomField>