sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/Business_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Id__c</fullName>
    <description>Business group Id</description>
    <label>Business Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>