sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/New_Revenue_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Revenue_Value__c</fullName>
    <description>The new adjusted revenue to be added to the actual at week level</description>
    <inlineHelpText>The new value will be added to the actuals</inlineHelpText>
    <label>New Revenue Value (addition)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>