sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>enter the notes of the actual adjustment</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>