sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>product type for actuals adjustments</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Product_Type</valueSetName>
    </valueSet>
</CustomField>