sfdx-source/force-app/main/default/objects/Brand_Actuals_Adjustment__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <description>Post-Sale or Franchise</description>
    <inlineHelpText>Enter Post-Sale or Franchise</inlineHelpText>
    <label>Sales Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>